force-app/main/default/objects/Tienda__c/fields/DSALES_A_o_de_ltima_remodelaci_n__c.field-meta.xml
<CustomField>
    <fullName>DSALES_A_o_de_ltima_remodelaci_n__c</fullName>
    <description>Indica el año de última remodelación</description>
    <inlineHelpText>Indica el año de última remodelación</inlineHelpText>
    <label>Año de última remodelación</label>
    <type>Date</type>
</CustomField>