force-app/main/default/objects/Tienda__c/fields/DSALES_Direccin__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Direccin__c</fullName>
    <label>Dirección</label>
    <type>TextArea</type>
</CustomField>