force-app/main/default/objects/Tienda__c/fields/DSALES_Fechadeapertura__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fechadeapertura__c</fullName>
    <label>Fecha de apertura</label>
    <type>Date</type>
</CustomField>