force-app/main/default/objects/Tienda__c/fields/DSALES_Formato__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Formato__c</fullName>
    <description>Indica los diferentes formatos de tienda y sucursales</description>
    <inlineHelpText>Indica los diferentes formatos de tienda y sucursales</inlineHelpText>
    <label>Formato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TIENDA COPPEL</fullName>
                <default>true</default>
                <label>TIENDA COPPEL</label>
            </value>
            <value>
                <fullName>COPPEL REMATE</fullName>
            </value>
            <value>
                <fullName>TIENDA MUEBLES</fullName>
            </value>
            <value>
                <fullName>COPPEL DIGITAL</fullName>
            </value>
            <value>
                <fullName>TIENDA MUEBLES + ZAPATERÍA</fullName>
            </value>
            <value>
                <fullName>ZAPATERÍA</fullName>
            </value>
            <value>
                <fullName>ZAPATERÍA + COPPEL DIGITAL</fullName>
            </value>
            <value>
                <fullName>TIENDA ROPA</fullName>
            </value>
            <value>
                <fullName>TIENDA VIRTUAL</fullName>
            </value>
            <value>
                <fullName>SUCURSAL BANCARIA</fullName>
            </value>
            <value>
                <fullName>BANCOPPEL STAND ALONE</fullName>
            </value>
            <value>
                <fullName>FASHION MARKET</fullName>
            </value>
            <value>
                <fullName>COPPEL MOTOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>