force-app/main/default/objects/Tienda__c/fields/DSALES_N_mero_Celular__c.field-meta.xml
<CustomField>
    <fullName>DSALES_N_mero_Celular__c</fullName>
    <description>Indica el número de teléfono celular</description>
    <inlineHelpText>Indica el número de teléfono celular</inlineHelpText>
    <label>Número Celular</label>
    <type>Phone</type>
</CustomField>