force-app/main/default/objects/Tienda__c/fields/DSALES_Nombre_GerentedeTiendadeZona__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Nombre_GerentedeTiendadeZona__c</fullName>
    <description>Indica el nombre del  Gerente de Tienda de Zona</description>
    <inlineHelpText>Indica el nombre del  Gerente de Tienda de Zona</inlineHelpText>
    <label>Nombre Gerente de Tienda de Zona</label>
    <length>50</length>
    <type>Text</type>
</CustomField>