force-app/main/default/objects/Tienda__c/fields/DSALES_Regin__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Regin__c</fullName>
    <label>Región</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AZCP</fullName>
            </value>
            <value>
                <fullName>CDJZ</fullName>
            </value>
            <value>
                <fullName>CLCN</fullName>
            </value>
            <value>
                <fullName>CTLZ</fullName>
            </value>
            <value>
                <fullName>GDLJ I</fullName>
            </value>
            <value>
                <fullName>GDLJ II</fullName>
            </value>
            <value>
                <fullName>GPLC</fullName>
            </value>
            <value>
                <fullName>HLLO</fullName>
            </value>
            <value>
                <fullName>IXTP</fullName>
            </value>
            <value>
                <fullName>IZTP</fullName>
            </value>
            <value>
                <fullName>LEON</fullName>
            </value>
            <value>
                <fullName>LEON II</fullName>
            </value>
            <value>
                <fullName>LMCH</fullName>
            </value>
            <value>
                <fullName>MRDA</fullName>
            </value>
            <value>
                <fullName>MTRY I</fullName>
            </value>
            <value>
                <fullName>MTRY II</fullName>
            </value>
            <value>
                <fullName>MXLI</fullName>
            </value>
            <value>
                <fullName>OAXC</fullName>
            </value>
            <value>
                <fullName>PBLA</fullName>
            </value>
            <value>
                <fullName>SNLP</fullName>
            </value>
            <value>
                <fullName>TCMC</fullName>
            </value>
            <value>
                <fullName>TOLC</fullName>
            </value>
            <value>
                <fullName>TXCC</fullName>
            </value>
            <value>
                <fullName>VLLH</fullName>
            </value>
            <value>
                <fullName>VRCZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>