force-app/main/default/objects/Tienda__c/fields/DSALES_Tel_fono_TiendaBase__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tel_fono_TiendaBase__c</fullName>
    <description>Indica el número de teléfono de la tienda base</description>
    <inlineHelpText>Indica el número de teléfono de la tienda base</inlineHelpText>
    <label>Teléfono Tienda Base</label>
    <type>Phone</type>
</CustomField>