force-app/main/default/objects/Tienda__c/fields/DSALES_Telfono__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Telfono__c</fullName>
    <description>Campo para ingresar el numero de teléfono de la tienda</description>
    <label>Teléfono</label>
    <type>Phone</type>
</CustomField>