force-app/main/default/objects/Tienda__c/fields/DSALES_Tienda_Base__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tienda_Base__c</fullName>
    <description>Indica el folio de la Tienda Base</description>
    <inlineHelpText>Indica el folio de la Tienda Base</inlineHelpText>
    <label>Tienda Base</label>
    <length>10</length>
    <type>Text</type>
</CustomField>