force-app/main/default/objects/Tienda__c/fields/DSales_TiendaID__c.field-meta.xml
<CustomField>
    <fullName>DSales_TiendaID__c</fullName>
    <label>ID Tienda</label>
    <length>20</length>
    <type>Text</type>
</CustomField>