force-app/main/default/objects/Tienda__c/fields/Tipo_de_Tienda_Inmueble_Renta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Tienda_Inmueble_Renta__c</fullName>
    <label>Tipo  de Tienda Inmueble / Renta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propio</fullName>
                <default>true</default>
                <label>Propio</label>
            </value>
            <value>
                <fullName>Rentado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>