force-app/main/default/objects/Tienda__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DSALES_Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>